Fixed Vertical Songbooks title alignment issue when viewing songs

--- a/style.css
+++ b/style.css
@@ -397,6 +397,9 @@ body.song #songbookList h3 {
   background-color: lightyellow;
   z-index: 1000;
 }
+body.song #songbookList a {
+  height: 15rem;
+}
 body.edit.song #songList #songListEdit {
   flex: 0 0 0 !important;
 }
